# test02

./: .env.example  .gitattributes  .gitignore  Dockerfile  Makefile  README.md  conftest.py  project-config.yml  pyproject.toml  pyproject.toml.template
.devcontainer/: devcontainer.json  setup.sh
.github/: PULL_REQUEST_TEMPLATE.md  copilot-code-review-instructions.md  copilot-instructions.md
.github/ISSUE_TEMPLATE/: bug.yml  epic.yml  feature.yml
.github/agents/: auditor-reliability.agent.md  auditor-security.agent.md  auditor-spec.agent.md  implementer.agent.md  orchestrator.agent.md  release-manager.agent.md  test-engineer.agent.md
.github/instructions/: docs.instructions.md  security.instructions.md  tests.instructions.md
.github/prompts/: AUDIT_RELIABILITY.prompt.md  AUDIT_SECURITY.prompt.md  AUDIT_SPEC.prompt.md  EXECUTE.prompt.md  FINAL_REVIEW.prompt.md
.github/workflows/: ci.yml  issue-lifecycle.yml  production.yml  staging.yml
.serena/: project.yml
agents/: auditor_reliability.agent.md  auditor_security.agent.md  auditor_spec.agent.md  implementer.agent.md  orchestrator.agent.md  release_manager.agent.md  test_engineer.agent.md
ci/: policy_check.py
docs/: GETTING_STARTED.md  UPGRADE_GUIDE.md  architecture.md  constraints.md  fix-proposal-improvement-docs-dev-orchestration-template-001.md  improvement-plan-dev-orchestration-template-001.md  improvement-requirements-dev-orchestration-template-001.md  mobile-workflow.md  observability-guide.md  orchestration.md  plan.md  policies.md  quality-guide.md  requirements.md  review-improvement-docs-dev-orchestration-template-001.md  review-report.md  runbook.md  security-policy-template.md
notebooks/: README.md
scripts/: bootstrap.sh  init_packages.sh  setup_github.sh  update_agent_models.sh
src/: app.py
tests/: test_app_error_handling.py  test_auth_service.py  test_config.py  test_core.py  test_domain_constraints.py  test_domain_learning.py  test_domain_sample.py  test_drive_service.py  test_gemini_service.py  test_grade_validator.py  test_learning_service.py  test_main_pipeline.py  test_models.py  test_observability.py  test_permissions.py  test_permissions_roles.py  test_sample_properties.py  test_user_profile.py  test_web_app.py
web/: app.py
(+34 files in other folders)
