[project]
name = "mirastudy"
version = "0.1.0"
description = "子供向け学習支援アプリ MiraStudy v2.0 バックエンド"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
testing = [
    "pytest>=8.0",
    "hypothesis>=6.0",
    "pytest-cov>=4.0",
    "mutmut>=2.5.0",
]
dev = [
    "ruff>=0.4.0",
    "mypy>=1.10.0",
    "pytest>=8.0",
    "hypothesis>=6.0",
    "pytest-cov>=4.0",
    "mutmut>=2.5.0",
    "pip-audit>=2.7.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mirastudy"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM", "TCH"]

[tool.mypy]
python_version = "3.11"
strict = false
warn_return_any = false
warn_unused_configs = true
explicit_package_bases = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.coverage.run]
source = ["src"]
omit = ["src/mirastudy/*", "src/observability/*", "*/tests/*"]

[tool.coverage.report]
fail_under = 80
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
]

[tool.mutmut]
paths_to_mutate = "src/"
tests_dir = "tests/"
